updating landing page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <h2><a href="https://github.com/lukso-network/example-dapps-ethjs" target="_blank">Example dApps</a></h2>
 
     <hr />
-    <h4>Examples using the Universal Profile Extension or MetaMask:</h4>
-    <a href="accounts.html">Account dApp</a> -- See your Ethereum accounts and balances
-    <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get from a SimpleStore contract
-    <br /><a href="tictactoe.html">Tic Tac Toe</a> -- A game of tic tac toe, the winner gets the reward!
+    <h4>Examples using the Universal Profile Extension:</h4>
+    <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
+    <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
+    <br /><a href="tictactoe.html">Tic Tac Toe</a> -- A game of tic tac toe
 
     <hr />
     <b>Repository</b> <a href="https://github.com/lukso-network/example-dapps-ethjs" target="_blank">lukso-network/example-dapps-ethjs</a>
