update accounts and comments

--- a/accounts.html
+++ b/accounts.html
@@ -1,86 +1,108 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  </head>
-  <body class="container" style="padding-top: 3%;">
-    <h2><a href="index.html">Home</a></h2>
-    <h4>Account dApp</h4>
 
-    <!-- Extension Notice -->
-    <div style=" border: 1px solid #9b4dca; padding: 10px; margin-bottom: 10px;">
-      <p>Make sure to either enable the Universal Profile Extension or MetaMask at the same time. Here you can find guides to do so for
-        <a href="https://support.google.com/chrome_webstore/answer/2664769?hl=en" target="_blank">Chrome</a> and
-        <a href="https://support.mozilla.org/en-US/kb/disable-or-remove-add-ons#w_disabling-and-removing-extensions" target="_blank">Firefox.</a>
-      </p>
-      <table>
-        <tr>
-          <th>By using the Universal Profile Extension:</th>
-          <th>By using the MetaMask Extension:</th>
-        </tr>
-        <tr>
-          <td>- Log in and see your balance</td>
-          <td>- Log in </br> - <a href="https://docs.lukso.tech/networks/l14-testnet" target=”_blank”>Add the LUKSO L14 Network</a>
-            </br> - Swap to the LUKSO L14 Network and refresh the page
-            </br> - See your balance interacting</td>
-        </tr>
-      </table>
-    </div>
+<head>
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
+  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
+</head>
 
-    <!-- Warnings -->
-    <p id="browser" style=" background-color: #F4F5F6; display: none; padding: 10px;">Please switch to a
-      <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
-      <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
-    </p>
-    <p id="network" style=" background-color: #F4F5F6; display: none; padding: 10px;">
-        Please swap to the LUKSO L14 testnetwork in order to interact.
-    </p>
-    <p id="install" style=" background-color: #F4F5F6; display: none; padding: 10px;">
-        Please install the
-        <a href="WIP" target="_blank">Universal Profile</a> or
-        <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
-    </p>
-    <div id="login" style=" background-color: #F4F5F6; padding: 10px 10px 0px 10px; display: none; align-items: center;">
-        <button id="loginbutton">Log in to your browser extension</button>
-    </div>
+<body class="container" style="padding-top: 3%;">
+  <p><a href="index.html">Back to Landing Page</a></p>
+  <h2>Simple Storage dApp</h2>
 
-    <hr />
+  <!-- Extension Notice -->
+  <p class="note" style="display: block;">If you have multiple Web3 extensions installed, make sure to only enable one.
+    Here
+    you can find guides to manage
+    <a href="https://support.google.com/chrome_webstore/answer/2664769?hl=en" target="_blank">Chrome</a> and
+    <a href="https://support.mozilla.org/en-US/kb/disable-or-remove-add-ons#w_disabling-and-removing-extensions"
+      target="_blank">Firefox</a> extensions.
+  </p>
 
-    <!-- dApp Frontend-->
-    <table>
-      <thead> <tr> <th>Address</th> <th>Balance</th> </tr> </thead>
-      <tbody id="accounts"> <tr><td colspan="2">Trying to load your accounts...</td></tr> </tbody>
-    </table>
+  <!-- Warnings -->
+  <div class="warning" id="extension" style="display: none">
+    MetaMask detected. To ensure the best expirience, install the
+    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
+      Profile Browser
+      Extension</a> from LUKSO.
+  </div>
+  <p id="browser" class="warning">Please switch to a
+    <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
+    <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
+  </p>
+  <p id="network" class="warning"">
+    Please swap to the LUKSO L14 testnetwork in order to interact.
+  </p>
+  <p id=" install" class="warning"">
+    Please install the
+    <a href=" WIP" target="_blank">Universal Profile</a> or
+    <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
+  </p>
+  <div id="login" class="warning"">
+    <button id=" loginbutton">Log in to your browser extension</button>
+  </div>
 
-    <!-- Web3 -->
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <hr />
 
-    <!-- Connect Extension & Check Network -->
-    <script src="./utils.js"></script>
+  <!-- dApp Frontend-->
+  <table>
+    <thead>
+      <tr>
+        <th>Address</th>
+        <th>Balance</th>
+      </tr>
+    </thead>
+    <tbody id="accounts">
+      <tr>
+        <td colspan="2">Trying to load your accounts...</td>
+      </tr>
+    </tbody>
+  </table>
 
-    <!-- dApp Function -->
-    <script type="text/javascript">
-      let el = function(id){ return document.querySelector(id); };
+  <!-- Web3 -->
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
-      async function dApp() {
-        
-        // Check network
-        if(await connectWeb3() && await checkNetwork()){
-          const web3 = new Web3(window.ethereum);
-          let accounts = await ethereum.request({ method: "eth_accounts" });
-          console.log(accounts);
+  <!-- Connect Extension & Check Network -->
+  <script src="./utils.js"></script>
 
-          for (var i = 0; i < accounts.length; i++){
-            el('#accounts').innerHTML += '<tr><td>'
-              + accounts[i] + '</td><td id="accountBalance_'
-              + accounts[i] + '"></td></tr>';
-            console.log();
-            el('#accountBalance_' + accounts[i]).innerHTML += web3.utils.fromWei(await web3.eth.getBalance(accounts[i]), 'ether')
+  <!-- Main Function -->
+  <script type="text/javascript">
+    let el = function (id) { return document.querySelector(id); };
+
+    // dApp Functionality
+    async function dApp() {
+
+      /**
+       * Only start the dApp if an extension is installed and right network connected 
+       * Functions can be found in utils.js and return bool
+       */
+      if (await connectWeb3() && await checkNetwork()) {
+        const web3 = new Web3(window.ethereum);
+        let accounts = await ethereum.request({ method: "eth_accounts" });
+        console.log(accounts);
+
+        // After receiving the account, clear the loading info
+        el('#accounts').innerHTML = '';
+
+        /**
+         * Show the address with balance within the table.
+         * Might return multiple accounts on 3rd party extensions
+         */
+        for (var i = 0; i < accounts.length; i++) {
+          el('#accounts').innerHTML += '<tr><td>'
+            + accounts[i] + '</td><td id="accountBalance_'
+            + accounts[i] + '"></td></tr>';
+          console.log();
+          el('#accountBalance_' + accounts[i]).innerHTML += web3.utils.fromWei(await web3.eth.getBalance(accounts[i]), 'ether')
             + ' LYXt';
-          }
         }
-      };
-      dApp();
+      }
+    };
 
-    </script>
-  </body>
+    // Start the dApp function
+    dApp();
+  </script>
+</body>
+
 </html>
