resolving element error

--- a/first-contract.html
+++ b/first-contract.html
@@ -21,7 +21,7 @@
   </p>
 
   <!-- Warnings -->
-  <div class="warning" id="extension" style="display: none">
+  <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
       Profile Browser
@@ -31,16 +31,16 @@
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
-  <p id="network" class="warning"">
+  <p id="network" class="warning">
     Please swap to the LUKSO L14 testnetwork in order to interact.
   </p>
-  <p id=" install" class="warning"">
+  <p id="install" class="warning">
     Please install the
     <a href=" WIP" target="_blank">Universal Profile</a> or
     <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
   </p>
-  <div id="login" class="warning"">
-    <button id=" loginbutton">Log in to your browser extension</button>
+  <div id="login" style="display: none">
+    <button id="loginbutton">Log in to your browser extension</button>
   </div>
 
   <hr />
