adding repository info

--- a/accounts.html
+++ b/accounts.html
@@ -60,6 +60,10 @@
     </tbody>
   </table>
 
+  <b style="padding-bottom: 50px ">Repository File:</b></br><a
+    href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/accounts.html"
+    target="_blank">lukso-network/example-dapps-ethjs/accounts.html</a>
+
   <!-- Web3 -->
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
