--- a/first-contract.html
+++ b/first-contract.html
@@ -85,7 +85,7 @@
       }
     </code></pre>
   <hr />
-  <b style="padding-bottom: 50px ">Repository File</b><a
+  <b style="padding-bottom: 50px ">Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/first-contract.html"
     target="_blank">lukso-network/example-dapps-ethjs/first-contract.html</a>
 
