updating landing page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-    <title>dApp Examples</title>
-  </head>
-  <body class="container" style="padding-top: 3%;">
-    <h2><a href="https://github.com/lukso-network/example-dapps-ethjs" target="_blank">Example dApps</a></h2>
 
-    <hr />
-    <h4>Examples using the Universal Profile Extension:</h4>
-    <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
-    <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
-    <br /><a href="tictactoe.html">Tic Tac Toe</a> -- A game of tic tac toe
+<head>
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
+  <title>dApp Examples</title>
+</head>
 
-    <hr />
-    <b>Repository</b> <a href="https://github.com/lukso-network/example-dapps-ethjs" target="_blank">lukso-network/example-dapps-ethjs</a>
-  </body>
+<body class="container" style="padding-top: 3%;">
+  <h2>Example dApps</h2>
+
+  <hr />
+  <h4>Examples using the Universal Profile Extension:</h4>
+  <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
+  <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
+  <br /><a href="tictactoe.html">Tic Tac Toe</a> -- Play a game of tic tac toe
+  <br /><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
+
+  <hr />
+  <b>Repositories:</br></b>
+  <a href="https://github.com/lukso-network/example-dapps-ethjs"
+    target="_blank">lukso-network/example-dapps-ethjs</a></br>
+  <a href="https://github.com/lukso-network/example-dapp-forum" target="_blank">lukso-network/example-dapp-forum</a>
+</body>
+
 </html>
