--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h4>Examples using the Universal Profile Extension:</h4>
   <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
   <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
-  <br /><a href="tictactoe.html">Tic Tac Toe</a> -- Play a game of tic tac toe
+  <br /><a href="tictactoe.html">Tic Tac Toe dApp</a> -- Play a game of tic tac toe
   <br /><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
 
   <hr />
