--- a/accounts.html
+++ b/accounts.html
@@ -24,8 +24,8 @@
   <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
-      Profile Browser
-      Extension</a> from LUKSO.
+      Profile Browser Extension</a> from LUKSO. Otherwise, <a href="https://docs.lukso.tech/networks/l14-testnet">get
+      LYXt</a> first.
   </div>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
