--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
   <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
   <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
   <br /><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
+  <br /><a href="https://github.com/lukso-network/example-dapp-lsps">LSPs dApp</a> -- Create the new Token and NFT (LSP7
+  and LSP8)
 
   <hr />
   <b>Repositories:</br></b>
   <a href="https://github.com/lukso-network/example-dapps-ethjs"
     target="_blank">lukso-network/example-dapps-ethjs</a></br>
-  <a href="https://github.com/lukso-network/example-dapp-forum" target="_blank">lukso-network/example-dapp-forum</a>
+  <a href="https://github.com/lukso-network/example-dapp-forum" target="_blank">lukso-network/example-dapp-forum</a><br>
+  <a href="https://github.com/lukso-network/example-dapp-lsps" target="_blank">
+    <lukso-network>lukso-netowork/example-dapps-lsps
+  </a><br>
+
 </body>
 
 </html>
