update testnet notice

--- a/accounts.html
+++ b/accounts.html
@@ -24,15 +24,15 @@
   <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
-      Profile Browser Extension</a> from LUKSO. Otherwise, <a href="https://docs.lukso.tech/networks/l14-testnet">get
-      LYXt</a> first.
+      Profile Browser Extension</a> from LUKSO.
   </div>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please swap to the LUKSO L14 testnetwork in order to interact.
+    Please <a href="https://docs.lukso.tech/networks/l14-testnet">swap to the LUKSO L14 testnetwork</a> in order to see
+    your account balance.
   </p>
   <p id="install" class="warning">
     Please install the
