--- a/first-contract.html
+++ b/first-contract.html
@@ -24,16 +24,16 @@
   <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
-      Profile Browser Extension</a> from LUKSO. Otherwise, <a href="https://docs.lukso.tech/networks/l14-testnet">get
-      LYXt</a> first.
+      Profile Browser Extension</a>. Otherwise, <a href="https://docs.lukso.tech/networks/l14-testnet">get
+      LYXt</a> to set the value.
   </div>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please swap to the LUKSO L14 testnetwork in order to interact.
-  </p>
+    Please <a href="https://docs.lukso.tech/networks/l14-testnet">swap to the LUKSO L14 testnetwork</a> in order to
+    interact. </p>
   <p id="install" class="warning">
     Please install the
     <a href=" WIP" target="_blank">Universal Profile</a> or
