--- a/first-contract.html
+++ b/first-contract.html
@@ -141,7 +141,7 @@
             simpleStoreInstance.methods.set(input).send({ from: account[0] })
               .then(function (transactionReceipt) {
                 el('#response').innerHTML = 'Value set. Your transaction hash is: ' + transactionReceipt.transactionHash;
-              });
+              }).catch(e => { el('#response').innerHTML = 'Last transaction got canceled.'; });
           }
 
           // User input is invalid
