update links + heading

--- a/accounts.html
+++ b/accounts.html
@@ -9,7 +9,7 @@
 
 <body class="container" style="padding-top: 3%;">
   <p><a href="index.html">Back to Landing Page</a></p>
-  <h2>Simple Storage dApp</h2>
+  <h2>Account dApp</h2>
 
   <!-- Extension Notice -->
   <p class="note" style="display: block;">If you have multiple Web3 extensions installed, make sure to only enable one.
@@ -36,7 +36,8 @@
   </p>
   <p id="install" class="warning">
     Please install the
-    <a href=" WIP" target="_blank">Universal Profile</a> or
+    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
+      target="_blank">Universal Profile</a> or
     <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
   </p>
   <div id="login" style="display: none">
@@ -59,6 +60,8 @@
       </tr>
     </tbody>
   </table>
+
+  <hr />
 
   <b style="padding-bottom: 50px ">Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/accounts.html"
