--- a/first-contract.html
+++ b/first-contract.html
@@ -36,7 +36,8 @@
     interact. </p>
   <p id="install" class="warning">
     Please install the
-    <a href=" WIP" target="_blank">Universal Profile</a> or
+    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
+      target="_blank">Universal Profile</a> or
     <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
   </p>
   <div id="login" style="display: none">
