--- a/first-contract.html
+++ b/first-contract.html
@@ -72,6 +72,8 @@
   <label>Solidity Code</label>
 
   <pre><code>
+    pragma solidity >=0.7.0 <0.9.0;
+    
       contract SimpleStore {
 
         function set(uint _value) public {
@@ -84,8 +86,10 @@
 
         uint value;
       }
-    </code></pre>
+  </code></pre>
+
   <hr />
+
   <b style="padding-bottom: 50px ">Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/first-contract.html"
     target="_blank">lukso-network/example-dapps-ethjs/first-contract.html</a>
