remove line break

--- a/first-contract.html
+++ b/first-contract.html
@@ -58,8 +58,7 @@
 
       <br /><br />
       <div id="response" style="padding: 20px; border: 1px solid #9b4dca; word-wrap: break-word; min-height: 94px">
-        Empty
-        response window</div>
+        Empty response window</div>
     </div>
     <div class="column column-40">
       <label>ABI</label>
