--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <hr />
   <h4>Examples using the Universal Profile Extension:</h4>
   <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
-  <br /><a href="first-contract.html">First Contract dApp</a> -- Set and Get a value from a smart contract
+  <br /><a href="simple-storage.html">Simple Storage dApp</a> -- Set and Get a value from a smart contract
   <br /><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
   <br /><a href="https://github.com/lukso-network/example-dapp-lsps">LSPs dApp</a> -- Create the new Token and NFT (LSP7
   and LSP8)
