open links on new page

--- a/accounts.html
+++ b/accounts.html
@@ -23,7 +23,8 @@
   <!-- Warnings -->
   <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
-    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
+    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
+      target="_blank">Universal
       Profile Browser Extension</a> from LUKSO.
   </div>
   <p id="browser" class="warning">Please switch to a
@@ -31,7 +32,8 @@
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please <a href="https://docs.lukso.tech/networks/l14-testnet">swap to the LUKSO L14 testnetwork</a> in order to see
+    Please <a href="https://docs.lukso.tech/networks/l14-testnet" target="_blank">swap to the LUKSO L14 testnetwork</a>
+    in order to see
     your account balance.
   </p>
   <p id="install" class="warning">
