--- a/simple-storage.html
+++ b/simple-storage.html
@@ -23,8 +23,9 @@
   <!-- Warnings -->
   <div class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
-    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
-      Profile Browser Extension</a>. Otherwise, <a href="https://docs.lukso.tech/networks/l14-testnet">get
+    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
+      target="_blank">Universal
+      Profile Browser Extension</a>. Otherwise, <a href="http://faucet.l14.lukso.network/" target="_blank">get
       LYXt</a> to set the value.
   </div>
   <p id="browser" class="warning">Please switch to a
@@ -32,7 +33,8 @@
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please <a href="https://docs.lukso.tech/networks/l14-testnet">swap to the LUKSO L14 testnetwork</a> in order to
+    Please <a href="https://docs.lukso.tech/networks/l14-testnet" target="_blank">swap to the LUKSO L14 testnetwork</a>
+    in order to
     interact. </p>
   <p id="install" class="warning">
     Please install the
