--- a/simple-storage.html
+++ b/simple-storage.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  <link rel="stylesheet/less" type="text/css" href="styles.less" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body class="container" style="padding-top: 3%;">
