--- a/accounts.html
+++ b/accounts.html
@@ -79,6 +79,22 @@
   <script type="text/javascript">
     let el = function (id) { return document.querySelector(id); };
 
+    // If Web3 extension found
+    if (window.ethereum) {
+
+      // Enable login button functionality
+      el("#loginbutton").addEventListener("click", async function () {
+
+        // Request login of extension
+        await ethereum.request({ method: "eth_requestAccounts" });
+
+        // Hide button after login was successful
+        el("#login").style.display = "none";
+
+        // Rerun dApp with logged-in extension
+        await dApp();
+      });
+    }
     // dApp Functionality
     async function dApp() {
 
