--- a/simple-storage.html
+++ b/simple-storage.html
@@ -113,6 +113,23 @@
     // Showing the ABI in the input field
     el('#abi').value = JSON.stringify(SimpleStoreABI, null, 2);
 
+    // If Web3 extension found
+    if (window.ethereum) {
+
+      // Enable login button functionality
+      el("#loginbutton").addEventListener("click", async function () {
+
+        // Request login of extension
+        await ethereum.request({ method: "eth_requestAccounts" });
+
+        // Hide button after login was successful
+        el("#login").style.display = "none";
+
+        // Rerun dApp with logged-in extension
+        await dApp();
+      });
+    }
+
     // dApp Functionality
     async function dApp() {
 
