--- a/simple-storage.html
+++ b/simple-storage.html
@@ -48,7 +48,7 @@
 
   <hr />
 
-  <!-- dApp Frontend -->
+  <!-- Webpage Frontend -->
   <div class="row">
     <div class="column column-60">
       <label>Set Value</label>
@@ -125,16 +125,16 @@
         // Hide button after login was successful
         el("#login").style.display = "none";
 
-        // Rerun dApp with logged-in extension
-        await dApp();
+        // Restart application with logged-in extension
+        await app();
       });
     }
 
-    // dApp Functionality
-    async function dApp() {
+    // Simple Storage Application
+    async function app() {
 
       /**
-       * Only start the dApp if: an extension is installed and right network connected 
+       * Only start the application if: an extension is installed and right network connected 
        * Functions can be found in utils.js and return bool
        */
       if (await connectWeb3() && await checkNetwork()) {
@@ -179,8 +179,8 @@
       }
     };
 
-    // Start the dApp function
-    dApp();
+    // Start the application
+    app();
 
   </script>
 </body>
