--- a/accounts.html
+++ b/accounts.html
@@ -21,12 +21,12 @@
   </p>
 
   <!-- Warnings -->
-  <div class="warning" id="extension">
+  <p class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
       target="_blank">Universal
       Profile Browser Extension</a> from LUKSO.
-  </div>
+  </p>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
