--- a/simple-storage.html
+++ b/simple-storage.html
@@ -21,13 +21,13 @@
   </p>
 
   <!-- Warnings -->
-  <div class="warning" id="extension">
+  <p class="warning" id="extension">
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
       target="_blank">Universal
       Profile Browser Extension</a>. Otherwise, <a href="http://faucet.l14.lukso.network/" target="_blank">get
       LYXt</a> to set the value.
-  </div>
+  </p>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
@@ -35,7 +35,8 @@
   <p id="network" class="warning">
     Please <a href="https://docs.lukso.tech/networks/l14-testnet" target="_blank">swap to the LUKSO L14 testnetwork</a>
     in order to
-    interact. </p>
+    interact.
+  </p>
   <p id="install" class="warning">
     Please install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
